Rearrange client information fields in HTML

--- a/index.html
+++ b/index.html
@@ -130,14 +130,12 @@
             <!-- جدول البيانات -->
             <table class="custom-table">
                 <tr>
-                    <td class="label-cell">رقم عميل النقل</td>
-                    <td><input type="text" class="editable-input" placeholder="أدخل الرقم"></td>
-                    <td class="label-cell">تليفون العميل</td>
-                    <td><input type="text" class="editable-input" placeholder="--"></td>
-                </tr>
-                <tr>
                     <td class="label-cell">اسم العميل</td>
                     <td colspan="3"><input type="text" class="editable-input" placeholder="أدخل اسم العميل كاملاً"></td>
+                </tr>
+                <tr>
+                    <td class="label-cell">تليفون العميل</td>
+                    <td colspan="3"><input type="text" class="editable-input" placeholder="--"></td>
                 </tr>
                 <tr>
                     <td class="label-cell">عنوان العميل</td>
